--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,6 +8,13 @@
 # testing
 /coverage
 
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # production
 /build
 
